<?xml version="1.0"?>
<package>
  <name>cob_teleop_cob4</name>
  <description>teleop_node_of_cob4</description>
  <version>0.1.0</version>
  <maintainer email="max-sieber@gmx.de">Maximilian Sieber</maintainer>
  <author email="max-sieber@gmx.de">Maximilian Sieber</author>
  <license></license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>  

  <!-- bride default dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- user dependencies -->
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>brics_actuator</build_depend>
  <run_depend>brics_actuator</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>trajectory_msgs</run_depend>
  <build_depend>cob_script_server</build_depend>
  <run_depend>cob_script_server</run_depend>

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->
  
</package>


