<?xml version="1.0"?>
<package>
  <name>generic_throttle</name>
  <version>0.1.5</version>
  <description>This package provides a throttle for ROS topics</description>

  <license>LGPL</license>
  
  <maintainer email="mattia.racca@aalto.fi">Mattia Racca</maintainer>
  <author email="mattia.racca@aalto.fi">Mattia Racca</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
