<package format="2">
  <name>generic_throttle</name>
  <version>0.1.5</version>
  <description>This package provides a throttle for ROS topics</description>

  <license>LGPL</license>
  
  <maintainer email="mattia.racca@aalto.fi">Mattia Racca</maintainer>
  <author email="mattia.racca@aalto.fi">Mattia Racca</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

</package>
