<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_test_tools</name>
  <version>0.6.34</version>
  <description>The scenario_test_tools package implements helpers for scriptable scenario testing.
    It allows to set up a test harness for eg. a state machine or other high level behavior by
    providing mocked implementations for various action servers and services that work together</description>

  <maintainer email="lvb@mojin-robotics.de">Loy van Beek</maintainer>
  <author email="lvb@mojin-robotics.de">Loy van Beek</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>

<!--  These are used in the test scripts, the framework can be used without these dependencies-->
  <test_depend>cob_sound</test_depend>
  <test_depend>cob_srvs</test_depend>
  <test_depend>control_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
</package>
